fixed align issue

--- a/frontend/src/About/About.css
+++ b/frontend/src/About/About.css
@@ -58,7 +58,7 @@ a.datalink {
     padding-bottom: 20px;
 }
 
-.galleryWrapper {
+.galleryWrapperAbout {
     display: block;
     margin-left: auto;
     margin-right: auto;
